# hs-etch

./: .gitignore  ChangeLog.md  README.md  etch.cabal  package.yaml  stack.yaml
app/: Main.hs
etchy/: Main.hs
examples/: add.e  bool.e  hello-world.e  hello.e  unit.e
examples/arithmetic/: add.e  add3.e  add5.e  mad.e  sub.e
examples/block/: body_noargs.e  body_onearg.e  body_soloarg.e  body_twoargs.e  id_onearg.e  nested.e  nestedargs.e  partial.e  partial_add.e  ret.e  unit_noargs.e  unit_onearg.e  unit_soloarg.e  unit_twoargs.e
examples/branch/: abs.e  unit.e  unit_block.e
examples/call/: arithmetic.e  firstclass.e  firstclassvar.e  unit.e
examples/def/: arithmetic.e  global.e  int_alias.e  nested.e  out_of_order.e  unit.e
examples/ffi/: putchar.e  putchar_def.e  unreachable.e
examples/function/: id.e  nested.e
examples/main/: add.e  unit.e
examples/op/: def_add.e
examples/print/: hello.e
examples/ptr/: kilobyte.e  kilobyte_arg.e  kilobyte_def.e  kilobyte_get.e  kilobyte_get_offset.e  kilobyte_ret.e  kilobyte_set.e  kilobyte_set_offset.e  null.e  null_def.e  segfault.e  segfault_set.e
examples/rt/: argc.e  main.e  main_firstchar.e
examples/sig/: int.e  intsig.e  intsig_wrong.e
examples/type/: bool.e  cchar.e  cint.e  constructor.e  cptr.e  depth_3.e  depth_3_r.e  i32.e  int.e  maybe.e  ptr_int.e  ptr_int_shorthand.e  unit.e  unit_multiple.e  wrapped_int.e  wrapper.e
src/Etch/: AST.hs  Analysis.hs  CodeGen.hs  Lexer.hs  Module.hs  Parser.hs  Semantics.hs
src/Etch/Analysis/: Resolution.hs  Semantics.hs
src/Etch/CodeGen/: Context.hs
(+7 files in other folders)
