name:                etch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shockkolate/etch#readme
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           Copyright (C) 2017 David Farrell
category:            Code Generation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Etch.AST
                     , Etch.Lexer
                     , Etch.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , attoparsec >= 0.13
                     , llvm-hs >= 4.2
  default-language:    Haskell2010

executable etchy
  hs-source-dirs:      etchy
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , pretty-show >= 1.6
                     , etch
  default-language:    Haskell2010

test-suite etch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , etch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shockkolate/etch
